# Arcade

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml  workflows.yml
Core/include/: Constants.hpp  Core.hpp  Enum.hpp  RuntimeException.hpp
Core/include/Arcade/: Constants.hpp  Core.hpp  Enum.hpp  EventsManager.hpp  RuntimeException.hpp
Core/include/Arcade/Clock/: Clock.hpp  Time.hpp
Core/include/Arcade/abstractions/: AGame.hpp  IGame.hpp  IRenderer.hpp  ISprite.hpp  IWindow.hpp
Core/include/Arcade/clock/: Clock.hpp  Time.hpp
Core/include/abstractions/: AGame.hpp  AGraphic.hpp  IGame.hpp  IGraphic.hpp  IRenderer.hpp
Core/src/: Core.cpp  main.cpp
Core/src/Clock/: Clock.cpp  Time.cpp
Core/src/Core/: Core.cpp  Events.cpp  cursor.cpp  events.cpp  game.cpp  gameLoop.cpp  init.cpp  libraries.cpp  login.cpp  mainLoop.cpp  menu.cpp  run.cpp
Core/src/Core/Clock/: clock.cpp  time.cpp
Core/src/Core/Libraries/: index.cpp  libraries.cpp  switch.cpp
Core/src/Core/Menu/: cursor.cpp  menu.cpp
Core/src/Core/libraries/: index.cpp  libraries.cpp  switch.cpp
Games/: CMakeLists.txt  README.md
Games/Nibbler/: CMakeLists.txt
Games/Nibbler/include/Arcade/: Nibbler.hpp
Games/Nibbler/src/: Nibbler.cpp  display.cpp  entryPoint.cpp  event.cpp  food.cpp  gameLoop.cpp  load.cpp  map.cpp  move.cpp
Games/Snake/: CMakeLists.txt
Games/Snake/include/Arcade/: Snake.hpp
Games/Snake/src/: Snake.cpp  entryPoint.cpp  event.cpp  food.cpp  gameLoop.cpp  load.cpp  move.cpp
Graphics/: CMakeLists.txt  README.md
Graphics/NCurses/: CMakeLists.txt
Graphics/NCurses/include/: Ncurses.hpp
Graphics/NCurses/include/Arcade/: NCursesRenderer.hpp  NCursesWindow.hpp  Ncurses.hpp
Graphics/NCurses/src/: Event.cpp  Events.cpp  NCursesWindow.cpp  Ncurses.cpp  Sprites.cpp  Texts.cpp  entryPoint.cpp
Graphics/SDL2/: CMakeLists.txt
Graphics/SDL2/include/: Sdl2.hpp
Graphics/SDL2/include/Arcade/: Sdl2.hpp  Sdl2Renderer.hpp  Sdl2Window.hpp
Graphics/SDL2/src/: Event.cpp  Events.cpp  Sdl2.cpp  Sdl2Window.cpp  Sound.cpp  Sprite.cpp  Sprites.cpp  Text.cpp  entryPoint.cpp
Graphics/SFML/: CMakeLists.txt
Graphics/SFML/include/: Sfml.hpp
Graphics/SFML/include/Arcade/: Sfml.hpp  SfmlRenderer.hpp  SfmlWindow.hpp
Graphics/SFML/src/: Event.cpp  Events.cpp  Sfml.cpp  SfmlWindow.cpp  Sound.cpp  Sprite.cpp  Sprites.cpp  Text.cpp  entryPoint.cpp
Graphics/ncurses/: CMakeLists.txt
Graphics/ncurses/include/: Ncurses.hpp
Graphics/ncurses/src/: Ncurses.cpp  entryPoint.cpp
Graphics/sfml/: CMakeLists.txt
Graphics/sfml/include/: Sfml.hpp
Graphics/sfml/src/: Sfml.cpp  entryPoint.cpp
cmake/: ClangFormat.cmake  ClangTidy.cmake  MakeDoc.cmake
cmake/modules/: MakeDoc.cmake
doc/doxygen/style/: doxygen-awesome.css
